responsive main page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -73,4 +73,7 @@ main {
     position: relative;
     overflow: hidden;
     padding: 3rem;
+    @include respond(tab-land) {
+        padding: 0;
+    }
 }
