--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,5 +22,5 @@
 @import "layout/navbar";
 @import "layout/home/header";
 @import "layout/home/vip";
-@import "layout/home/experience";
+@import "layout/home/story";
 @import "layout/home/offer";
