--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -6,13 +6,24 @@
     color: $color-grey-light-1 ;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+
+    @include respond(phone) {
+        padding-top: 2rem;
+        grid-template-columns: 1fr;
+        gap: 5rem;
+    }
 
     &__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         justify-items: center;
 
+        @include respond(phone) {
+            padding: 0 2rem;
+            border-radius: 0;
+        }
         .footer__list--header {
             font-size: 2rem;
             font-weight: 600;
@@ -35,6 +46,10 @@
         grid-template-rows: repeat(2, 1fr);
         justify-content: center;
 
+        @include respond(phone) {
+            margin: auto;
+        }
+
         h3 {
             line-height: 6rem;
             font-size: 3rem;
@@ -44,7 +59,7 @@
         &--input {
             position: relative;
             display: inline-block;
-            background-color:$color-white;
+            background-color: $color-white;
             border-radius: 1000px;
             padding: 1rem 1.5rem;
 
@@ -95,7 +110,10 @@
         align-items: end;
         justify-content: space-between;
         background-color: $color-grey-dark-3;
-        border-radius: 5px;
+        border-radius: 5px 5px 0 0;
+        @include respond(phone) {
+            border-radius: 0;
+        }
 
         &--1,
         &--2 {
