--- a/src/styles/layout/home/_header.scss
+++ b/src/styles/layout/home/_header.scss
@@ -1,7 +1,6 @@
 .header {
     height: 90vh;
     width: 100%;
-    // color: #000;
     background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.5), rgba($color-primary, 0.5)),
         url(../../../../public/23.jpg);
     background-size: cover;
@@ -12,7 +11,12 @@
     display: grid;
     grid-template-rows: 8rem 1fr 1fr;
     position: relative;
-    // overflow: hidden;
+
+    @include respond(phone) {
+        padding: 2rem;
+        border-radius: 0;
+        grid-template-rows: 0.5fr 0.3fr 1fr;
+    }
 
     &__nav {
         // background: red;
@@ -22,6 +26,10 @@
         position: relative;
         z-index: 10;
 
+        @include respond(phone) {
+            grid-template-columns: minmax(min-content, 2rem) 1fr;
+        }
+
         .header__nav--logo {
             // -webkit-mix-blend-mode: multiply;
             // mix-blend-mode: multiply;
@@ -29,6 +37,7 @@
             justify-content: center;
 
             img {
+                height: 4.5rem;
                 padding: 3px 15px;
             }
         }
@@ -43,6 +52,13 @@
             height: fit-content;
             background: #fff;
 
+            @include respond(phone) {
+                width: 100%;
+                grid-template-columns: repeat(4, 1fr);
+                grid-column: 1 / span 2;
+                grid-row: 2;
+            }
+
             &>li {
                 list-style: none;
                 padding: 1.5rem 0;
@@ -51,6 +67,14 @@
                 font-weight: 600;
                 cursor: pointer;
                 transition: all 0.3s;
+
+                @include respond(phone) {
+                    font-size: 1.5rem;
+
+                    &:not(:last-child) {
+                        border-right: 1px solid $color-grey-dark-3;
+                    }
+                }
             }
 
             & li:hover {
@@ -66,6 +90,11 @@
             justify-content: center;
             align-content: center;
             gap: 1.5rem;
+
+            @include respond(phone) {
+                margin-left: auto;
+                padding-right: 1rem;
+            }
 
             &>li {
                 position: relative;
@@ -160,9 +189,25 @@
         // align-content: center;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
+        @include respond(phone) {
+            margin: auto;
+        }
+
+        @include respond(phone) {
+            grid-template-rows: auto;
+        }
+
         &>h1 {
             font-size: 15rem;
             color: #fff;
+
+            @include respond(tab-port) {
+                font-size: 12rem;
+            }
+
+            @include respond(phone) {
+                font-size: 8rem;
+            }
         }
 
         &--1 span {
@@ -172,6 +217,10 @@
 
         &--2 {
             margin-top: auto;
+
+            @include respond(phone) {
+                margin-top: 0;
+            }
         }
     }
 
@@ -187,6 +236,21 @@
         position: relative;
         z-index: 10;
 
+        @include respond(phone) {
+            grid-template-columns: 1fr 1fr;
+            margin: 0;
+            margin-bottom: 2rem;
+            align-content: start;
+            align-items: center;
+            justify-items: center;
+            align-content: end;
+            gap: 5rem;
+
+            &>* {
+                align-items: start;
+            }
+        }
+
         &>* {
             align-items: end;
         }
@@ -199,8 +263,8 @@
             &>li {
                 list-style: none;
                 position: relative;
-                width: 160px;
-                height: 75px;
+                width: 16rem;
+                height: 7.5rem;
                 margin-bottom: -1.7rem;
                 clip-path: ellipse(50% 50% at 50% 50%);
                 display: flex;
@@ -274,6 +338,9 @@
                 position: relative;
                 font-weight: 500;
                 color: #666;
+                @include respond(phone) {
+                    color: $color-grey-light-1;
+                    }
 
                 &::before {
                     content: "";
@@ -302,6 +369,10 @@
             grid-template-rows: repeat(2, 1fr);
             grid-template-rows: repeat(2, min-content);
             align-content: end;
+
+            @include respond(phone) {
+                grid-column: 1 / span 2;
+            }
 
             &--text {
                 display: flex;
@@ -385,6 +456,11 @@
         position: absolute;
         z-index: 5;
 
+        @include respond(tab-port) {
+            height: 35rem;
+            width: 150%;
+        }
+
         &--icon {
             position: absolute;
             top: 0;
@@ -416,37 +492,23 @@
         cursor: pointer;
     }
 
-    // ////////////////////////////////////////////////////
-    // &-bg__img {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url(../../../public/home-3.jpg);
-    //     background-size: cover;
-    //     background-position: bottom;
-    //     background-repeat: no-repeat;
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -50%);
-    // }
-
     // @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     //     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     //     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     //     height: 95vh;
     // }
 
-    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    only screen and (min-width: 125em) {
-        // background-image: linear-gradient(to right bottom,
-        //         rgba($color-primary-light, 0.8),
-        //         rgba($color-primary-dark, 0.8)),
-        //     url(../img/hero.jpg);
-    }
+    // @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    // only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    // only screen and (min-width: 125em) {
+    //     // background-image: linear-gradient(to right bottom,
+    //     //         rgba($color-primary-light, 0.8),
+    //     //         rgba($color-primary-dark, 0.8)),
+    //     //     url(../img/hero.jpg);
+    // }
 
-    @include respond(phone) {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-    }
+    // @include respond(phone) {
+    //     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    //     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    // }
 }
