--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -178,6 +178,7 @@
 
 .btn--animation {
     transition: all .2s;
+
     &:hover {
         transform: translate(-50%, 50%) translateY(-3px) !important;
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
@@ -194,4 +195,33 @@
         transform: translate(-50%, 50%) translateY(-1px) !important;
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
+}
+
+.btn--counter {
+
+    &,
+    &:link,
+    &:visited {
+        text-decoration: none;
+        background: transparent;
+        display: inline;
+        width: fit-content;
+        transition: all .2s;
+        border: none;
+        font-size: 1.4rem;
+        cursor: pointer;
+        color: $color-white;
+    }
+
+    &:hover {
+        transform: translateY(-3px);
+
+    }
+
+    &:active,
+    &:focus {
+        outline: none;
+        transform: translateY(-1px);
+    }
+
 }
