add modal component and responsive product page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/feature-box";
 @import "components/form";
 @import "components/popup";
+@import "components/modal";
 // @import "components/story";
 
 @import "layout/footer";
