--- a/src/styles/layout/_product.scss
+++ b/src/styles/layout/_product.scss
@@ -5,6 +5,11 @@
     grid-template-columns: 1fr 1.5fr;
     gap: 4rem;
 
+    @include respond(phone) {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
     &__gallery {
         max-width: 60rem;
         mix-blend-mode: multiply;
@@ -208,6 +213,11 @@
             grid-template-columns: min-content 1fr;
             gap: 5rem;
 
+            @include respond(phone) {
+                grid-template-columns: min-content;
+                gap: 1rem;
+            }
+
             &--box {
                 display: flex;
                 align-items: center;
@@ -234,11 +244,13 @@
 
         &--buttons {
             padding-top: 3rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2rem;
 
             &--1 {
                 background: $color-primary-dark;
                 color: $color-white;
-                margin-right: 2rem;
                 font-size: 1.2rem;
                 width: 18rem;
 
