--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import "components/form";
 @import "components/popup";
 @import "components/modal";
+@import "components/loading";
 // @import "components/story";
 
 @import "validation/inputs";
