setup completed home page

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -38,6 +38,7 @@
             border-radius: 50%;
 
             svg {
+                transition: all 0.5s;
                 font-size: 1.1rem;
             }
         }
