--- a/src/styles/layout/home/_header.scss
+++ b/src/styles/layout/home/_header.scss
@@ -429,6 +429,7 @@
                     border-radius: 50%;
                     text-align: center;
                     cursor: pointer;
+                    transition: all 0.5s;
                 }
 
                 .deactive {
