--- a/src/styles/layout/_checkout.scss
+++ b/src/styles/layout/_checkout.scss
@@ -16,7 +16,11 @@
         border-radius: 5px;
 
         &__list {
+            max-height: 50rem;
+            overflow: auto;
+
             &--title {
+                text-wrap: nowrap;
                 font-size: 1.8rem;
                 color: $color-black;
                 font-weight: 600;
@@ -96,13 +100,16 @@
                         background: $color-primary-light;
                         color: $color-white;
                         transition: all 0.3s;
-                        &:hover{
+
+                        &:hover {
                             transform: translateY(1px);
-                            box-shadow: 1px 1px 20px rgba(#000,0.2);
+                            box-shadow: 1px 1px 20px rgba(#000, 0.2);
                         }
                     }
-                    span{
-                        color:$color-black
+
+                    span {
+                        width: 1rem;
+                        color: $color-black;
                     }
                 }
 
@@ -120,6 +127,13 @@
         border-radius: 5px;
         grid-column: 2;
         grid-row: 1 / span 2;
+
+        .carts--container {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
 
         @include respond(tab-port) {
             grid-column: 1;
@@ -158,6 +172,7 @@
 
                 input {
                     font-size: 1.3rem;
+                    width: 100%;
                     border: none;
                     outline: none;
                 }
